fix: enable overflow auto for body in globals.css

--- a/app/globals.css
+++ b/app/globals.css
@@ -75,4 +75,7 @@ p{
     overflow: auto;
     margin-right: 2rem;
   }
+  body{
+    overflow: auto;
+  }
 }
